<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_respon"
            android:icon="@drawable/ic_add_black"
            android:title="@string/menu_add_respown" />
        <item
            android:id="@+id/nav_hot_prospek"
            android:icon="@drawable/ic_favorite_black"
            android:title="@string/menu_hot_prospek" />
        <item
            android:id="@+id/nav_jadwal"
            android:icon="@drawable/ic_alarm_black"
            android:title="@string/menu_jadwal" />
        <item
            android:id="@+id/nav_data_respown"
            android:icon="@drawable/ic_storage_black"
            android:title="@string/menu_data" />
        <item
            android:id="@+id/nav_tentang"
            android:icon="@drawable/ic_error_black"
            android:title="@string/menu_tentang" />
    </group>



</menu>
