<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="12dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="12dp"
    tools:context=".activities.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/logo2" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appName"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="26sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/kptiPDM"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/divisi"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/thn"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/tahun"
            android:textSize="18sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>