<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="12dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="0dp"
    tools:context=".activities.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/judul"
            android:textSize="24dp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_konsumen"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textSize="16sp"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alamat_konsumen"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="16sp"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sumberRespown"
            android:layout_width="match_parent"
            android:entries="@array/sumber"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal">
        </androidx.appcompat.widget.AppCompatSpinner>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textSize="16dp"
            android:hint="@string/jadwal_survei"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:hint="dd/mm/yy"
                android:padding="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/button_date_1"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="Atur "
                android:shadowRadius="4"
                android:background="@drawable/rounded_bg"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"/>
        </LinearLayout>
    </RelativeLayout>




        <!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/textInputLayoutTanggal"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/textInputEditTextTanggal"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/tanggal_respown"-->
<!--                android:inputType="date"-->
<!--                android:maxLines="1"-->
<!--                android:textSize="16sp"-->
<!--                android:textColor="@android:color/white" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/status"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="16sp"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutMinat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextMinat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/minat_lokasi"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="16sp"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutJadwal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextJadwal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jadwal_survei"
                android:inputType="datetime"
                android:maxLines="1"
                android:textSize="16sp"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCatatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextCatatan"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="text"
                android:hint="@string/catatan"
                android:maxLines="10"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorTextHint"
            android:text="@string/text_add"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>